[package]
name = "blackjack_ai"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
burn = { version = "0.20.1", features = ["wgpu"] }
rand = "0.10.0"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }

[[bench]]
name = "benchmark"
harness = false